cabal-version:   3.0
name:            radon-examples
version:         0.1.0.0

common warnings
  ghc-options: -Wall

executable radon-base-example
  import:           warnings
  default-language: Haskell2010
  hs-source-dirs:   example
  main-is:          Main.hs
  other-modules:    Types
  build-depends:
    , base
    , radon-base

executable radon-bunnymark-example
  import:           warnings
  default-language: Haskell2010
  hs-source-dirs:   bunnymark
  main-is:          Main.hs
  other-modules:    Types
  build-depends:
    , base
    , h-raylib
    , radon-base
